--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "dev": "nodemon",
     "start": "ts-node src/index.ts",
     "clean": "rimraf ./dist",
-    "public": "ncp ./src/public ./dist/public",
-    "build": "npm run clean && tsc && npm run public"
+    "build": "npm run clean && tsc",
+    "test": "NODE_ENV=test nodemon --exec 'mocha -R min'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@moebius/http-graceful-shutdown": "^1.1.0",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^8.0.1",
     "mongoose": "^5.9.25",
     "morgan": "^1.10.0",
     "ncp": "^2.0.0",
@@ -25,6 +25,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "rimraf": "^3.0.2",
+    "supertest": "^4.0.2",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7",
     "winston": "^3.3.3"
