--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "start": "ts-node src/index.ts",
     "clean": "rimraf ./dist",
     "build": "npm run clean && tsc",
-    "test": "NODE_ENV=test nodemon --exec 'mocha -R min'"
+    "test": "mocha -r ts-node/register 'tests/**/*.ts'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/node": "^7.10.5",
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mocha": "^8.0.1",
     "mongoose": "^5.9.25",
     "morgan": "^1.10.0",
     "ncp": "^2.0.0",
@@ -34,11 +35,20 @@
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.7",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mocha": "^8.0.0",
     "@types/mongoose": "^5.7.32",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.24",
     "@types/passport": "^1.0.4",
     "@types/passport-jwt": "^3.0.3",
-    "@types/winston": "^2.4.4"
-  }
+    "@types/winston": "^2.4.4",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^8.0.1"
+  },
+  "exclude": [
+    "./tests/",
+    "./node_modules/",
+    "./dist/"
+  ]
 }
